--- a/package.json
+++ b/package.json
@@ -1,34 +1,59 @@
 {
-  "name": "logbook-orea85-vanilla",
+  "name": "logbook-orea85",
   "version": "1.0.0",
-  "description": "Catatan Harian Komisi Treatment - Vanilla JavaScript untuk Vercel",
-  "main": "index.html",
+  "description": "Catatan Harian Komisi Treatment - Next.js Application",
+  "private": true,
   "scripts": {
-    "start": "python -m http.server 3000",
-    "dev": "python -m http.server 3000",
-    "build": "echo 'No build process needed for vanilla JS'",
-    "preview": "python -m http.server 3001",
-    "lint": "echo 'Linting completed'",
-    "deploy": "vercel --prod"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:generate": "prisma generate"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.0.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^3.0.0",
+    "lucide-react": "^0.263.1",
+    "next": "15.3.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "15.3.5",
+    "postcss": "^8.0.0",
+    "prisma": "^5.0.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "treatment",
     "komisi",
     "catatan",
-    "vanilla-javascript",
-    "pwa",
-    "vercel"
+    "next.js",
+    "react",
+    "typescript",
+    "prisma"
   ],
   "author": "OREA 85",
   "license": "MIT",
-  "devDependencies": {},
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/FahrulKun/Logbook-orea85.git"
   },
-  "homepage": "https://logbook-orea85-vanilla.vercel.app",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
